--- a/PersonalProject_C#_2023_11_8/PersonalProject_C#_2023_11_8/PersonalProject_C#_2023_11_8.csproj
+++ b/PersonalProject_C#_2023_11_8/PersonalProject_C#_2023_11_8/PersonalProject_C#_2023_11_8.csproj
@@ -6,6 +6,7 @@
     <RootNamespace>PersonalProject_C__2023_11_8</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <BaseOutputPath>bin\</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
